2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	* 

2013-01-28  Andreas Kupries <andreask@activestate.com>

	* decode.tcl: New. Simple package to support writing decoders
	* pkgIndex.tcl: for binary files.

2013-01-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.man: [Bug 3147481], [Bug 3141568]. Fixed issues with
	* fileutil.tcl: changes to [glob]'s behaviour in 8.5+, reported
	* find.setup: by guardus@users.sourceforge.net. Plus [Bug 3599839]
	* find.test: reminding us of these, and Win 7. Bumped version to
	* pkgIndex.tcl: 1.14.5. Extended testsuite, can be repro'd under
	  Unix also.

2012-08-29  Andreas Kupries <andreask@activestate.com>

	* traverse.tcl (Init): Fixed a bug where a symlink to the
	* traverse.man: base directory was not handled correctly.
	* traverse.test: It got expanded and should not have been.
	* pkgIndex.tcl: Cause was missing initialization of the _known set
	* find.setup: with the normalized base path. Added test for this.
	  Bumped version to 0.4.3.

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-12-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* traverse.tcl: Mark directories as 'known' only if we decided
	* traverse.man: to recurse into them. Otherwise a link to a
	* pkgIndex.tcl: directory we choose to not follow may non-
	  deterministically prevent us from recursing into the original
	  directory, depending on the order we encounter them in. Bumped
	  package version to 0.4.2.

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2010-06-16  Andreas Kupries  <akupries@shaw.ca>

	* fileutil.tcl (::fileutil::fileType): Fumbled the extension of
	* fileutil.man: the doctools/toc/idx detector in the last change.