@@ -187,5 +187,5 @@ namespace eval ::fileutil::decode {
 
 # ### ### ### ######### ######### #########
 ## Ready
-package provide fileutil::decode 0.1
+package provide fileutil::decode 0.2
 return
