@@ -365,5 +365,5 @@ snit::type            ::zipfile::encode {
 
 # ### ### ### ######### ######### #########
 ## Ready
-package provide zipfile::encode 0.1
+package provide zipfile::encode 0.2
 return
