@@ -1,3 +1,11 @@
+2013-02-14  Andreas Kupries  <andreask@activestate.com>
+
+	* decode.tcl: Bumped zip::decode and -encode to 0.3 and 0.2
+	* encode.tcl: respectively to distinguish properly from the
+	* pkgIndex.tcl: 0.1/2.xxx versions which existed in AS/perforce
+	  before they moved to tcllib/fossil. That should have been done
+	  as part of the move, and was forgotten.
+
 2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
